<resources>
    <string name="app_google_play_store_link" translatable="false">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link" translatable="false">"market://details?id="</string>
    <string name="empty_screen" translatable="false">We do not have anything\nhere right now.</string>
    <string name="please_retry" translatable="false">Please Retry</string>
    <string name="retry" translatable="false">Thử lại</string>
    <string name="welcome_login">Đăng nhập</string>
    <string name="welcome_sign_up">Đăng ký</string>
    <string name="welcome_cash_loan">Vay tiền mặt</string>
    <string name="title_activity_home">Trang chủ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="prompt_phone_number">Số điện thoại di động</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_by_touch_id">Đăng nhập bằng vân tay</string>
    <string name="support_form_title">Nếu bạn có bất kỳ thắc mắc nào hoặc cần hỗ trợ, xin vui lòng gửi theo mẫu dưới. Chúng tôi sẽ phản hồi bạn sớm</string>
    <string name="my_profile">Hồ sơ của tôi</string>
    <string name="log_out">Đăng xuất</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="settings">Cài đặt</string>
    <string name="locations">Địa điểm</string>
    <string name="terms_and_conditions">Điều khoản và điều kiện</string>
    <string name="user_manual">Hướng dẫn sử dụng</string>
    <string name="contracts">Hợp đồng</string>
    <string name="notifications">Thông báo</string>
    <string name="feedback">Phản hồi</string>
    <string name="more">Thêm</string>
    <string name="forgot_password">Bạn quên mật khẩu?</string>
    <string name="notice">Thông báo</string>
    <string name="ok">Đồng ý</string>
    <string name="unable_to_connect_message">Không thể kết nối đến máy chủ. Vui lòng thử lại</string>
    <string name="no_internet_connection">Không có kết nối mạng</string>
    <string name="title_activity_acl_validation">Đăng ký khoản vay</string>
    <string name="acl_register_legal_note"><html><i><b>Ghi chú: </b>Vui lòng đảm bảo rằng bạn nhập thông tin chính xác vì thông tin này được sử dụng như là một phần của quá trình duyệt khoản vay</i></html></string>
    <string name="action_next">Tiếp tục</string>
    <string name="action_next2">Tiếp theo</string>
    <string name="personal_detail">Thông tin cá nhân</string>
    <string name="prompt_id_number">Số chứng minh nhân dân</string>
    <string name="otp_hint">Chúng tôi đã gửi mã xác thực đến số điện thoại %s. Mã sẽ hết hạn trong vòng</string>
    <string name="otp_page_title">Xác Nhận</string>
    <string name="otp_input_hint">Nhập mã xác thực</string>
    <string name="otp_resend_message">Bạn chưa nhận được mã xác nhận?</string>
    <string name="otp_resend_cmd_title">Nhấp vào đây để nhận lại mã xác nhận</string>
    <string name="payment_shedule">Lịch thanh toán</string>
    <string name="offers">Ưu đãi</string>
    <string name="pay_momo">Trả bằng MoMo</string>
    <string name="momo_app_package">com.mservice.momotransfer</string>
    <string name="title_activity_acl_introduction">AclIntroductionActivity</string>
    <string name="cash_loan_a_header">Chào mừng bạn đến với Home Credit Việt Nam</string>
    <string name="cash_loan_b_header">Vay tiêu dùng</string>
    <string name="cash_loan_c_header">Hồ sơ vay</string>
    <string name="cash_loan_a_desc">Với hơn 6 triệu khách hàng thân thiết, Home Credit tự hào là công ty tài chính tiêu dùng được lựa chọn hàng đầu tại Việt Nam</string>
    <string name="cash_loan_b_desc">Với Home Credit bạn hoàn toàn có thể nhận khoản vay tiền mặt từ 10,000,000₫ - 40,000,000₫ với kỳ hạn vay từ 12 - 48 tháng. Bạn sẽ nhận kết quả duyệt hồ sơ trong vòng 15 - 20 phút và nhận tiền sau 2 giờ sau khi ký hợp đồng</string>
    <string name="action_back">Quay lại</string>
    <string name="cash_loan_c_desc">Vui lòng mang theo những giấy tờ sau để làm hồ sơ vay:</string>
    <string name="cash_loan_c_desc_1">Chứng minh nhân dân</string>
    <string name="cash_loan_c_desc_2">Giấy phép lái xe hoặc Sổ hộ khẩu</string>
    <string name="cash_loan_d_desc">Vui lòng chọn <b><font color='#E21838'>tiếp tục</font></b> để tìm các địa điểm vay gần nhất. Chúng tôi sẵn sàng hỗ trợ quý khách trong quá trình nộp hồ sơ vay</string>
    <string name="cash_loan_d_header">Bạn đã sẵn sàng vay?</string>
    <string name="which_way_to_apply">Bạn muốn vay theo cách nào?</string>
    <string name="or">hoặc</string>
    <string name="apply_from_anywhere">Làm hồ sơ vay trực tuyến</string>
    <string name="online">Trực tuyến</string>
    <string name="apply_at_partner_stores">Làm hồ sơ vay tại điểm giao dịch</string>
    <string name="point_of_sales">Điểm giao dịch</string>
    <string name="hello">Xin chào</string>
    <string name="title_activity_af">Chọn khoản vay</string>
    <string name="legal_note"><![CDATA[<html><i><b>*Notes:</b> The monthly installment showed above includes insurance fee and may have a minor variance with the final contractual amount</i> </html>]]></string>
    <string name="cancel">Huỷ</string>
    <string name="otp_empty">Bạn phải nhập mã xác thực</string>
    <string name="otp_resend_success">Mã xác thực đã được gửi lại thành công, vui lòng chờ vài phút</string>
    <string name="change_language">Ngôn ngữ</string>
    <string name="english">English</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="push_notification">Thông báo</string>
    <string name="version">Phiên bản</string>
    <string name="rate_our_app">Đánh giá ứng dụng</string>
    <string name="login_invalid_input">Số điện thoại hoặc mật khẩu không hợp lệ</string>
    <string name="section_format">Empty fragment</string>
    <string name="contracts_help">Số hợp đồng là gì?</string>
    <string name="hint_phone_contracts">Số điện thoại trong hợp đồng</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="password_help">Đặt mật khẩu như thế nào?</string>
    <string name="set_password">Đặt Mật Khẩu</string>
    <string name="signup_now">Đăng ký ngay</string>
    <string name="dialog_contact_help_title">Vui lòng điền mã hợp đồng có 10 chữ số của bạn</string>
    <string name="dialog_contact_help_pay_other_title">Vui lòng điền mã hợp đồng có 10 chữ số của hợp đồng bạn muốn chi trả</string>
    <string name="dialog_contact_help_content">Vui lòng gọi dịch vụ khách hàng của chúng tôi %s để được hỗ trợ thêm </string>
    <string name="dialog_password_help_title">"- Mật khẩu phải bao gồm ít nhất 8 ký tự (bao gồm chữ số, chữ viết, chữ hoa và chữ thường)\n\n- Mật khẩu sẽ có độ bảo mật cao hơn khi có các ký tự đặc biệt (@ # $ %% ^ “…)\n\n- Mật khẩu cần được thay đổi định kỳ (ít nhất 1 lần trong năm)\n\n- Không sử dụng các thông tin cá nhân đơn giản (ngày sinh, số điện thoại, tên của bạn, tên của người thân như vợ/chồng/con, các dãy số đơn giản như 1234567, 111111… để lập mật khẩu"
    </string>
    <string name="dialog_password_help_content">Vui lòng gọi dịch vụ khách hàng của chúng tôi %s để được hỗ trợ thêm</string>
    <string name="dialog_fingersprint_announce">Tài khoản của bạn đã được tạo thành công. Để đăng nhập nhanh hơn, vui lòng kích hoạt chức năng Đăng nhập bằng vân tay  tại màn hình cài đặt</string>
    <string name="setting_goto">Mở cài đặt</string>
    <string name="error_password">Vui lòng nhập mật khẩu</string>
    <string name="error_password_confirm">Vui lòng nhập xác nhận mật khẩu</string>
    <string name="error_password_unmatch">Các mật khẩu đã nhập không trùng khớp, vui lòng thử lại</string>
    <string name="error_changepass_current_pass">Vui lòng nhập mật khẩu hiện tại</string>
    <string name="error_changepass_new_pass">Vui lòng nhập mật khẩu mới</string>
    <string name="error_changepass_new_confirm_pass">Vui lòng nhập lại mật khẩu mới</string>
    <string name="changepass_current_pass">Nhập mật khẩu hiện tại</string>
    <string name="changepass_new_pass">Nhập mật khẩu mới</string>
    <string name="changepass_new_confirm_pass">Nhập lại mật khẩu mới</string>
    <string name="thankyou">Cảm ơn</string>
    <string name="changepass_success">Mật khẩu của bạn đã được lưu thành công</string>
    <string name="profile">Hồ sơ của tôi</string>
    <string name="full_name">Họ và tên</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="id_number">Số CMND</string>
    <string name="residential_address">Địa chỉ</string>
    <string name="email">Email</string>
    <string name="phone_no">Điện thoại</string>
    <string name="update_profile_detail_message">*Nếu bạn muốn cập nhật thông tin vui lòng liên hệ dịch vụ khách hàng của chúng tôi</string>
    <string name="customer_service_phone" translatable="false">(028) 38 999 666</string>
    <string name="fingerprint_system_not_available">Điện thoại của bạn hiện chưa bật tính năng mở khóa bằng vân tay</string>
    <string name="fingerprint_not_enable">Bạn chưa kích hoạt chức năng này, vui lòng đăng nhập và kích hoạt nó tại màn hình cài đặt</string>
    <string name="fingerprint_login_info_not_found">Không thể đăng nhập với số phone hiện tại</string>
    <string name="fingerprint_firstime_end">\" tại màn hình cài đặt</string>
    <string name="fingerprint_firstime">Để đăng nhập nhanh hơn, vui lòng kích hoạt chức năng \"</string>
    <string name="fingerprint_firstime_after_sigup">Tài khoản của bạn đã được tạo thành công. Để đăng nhập nhanh hơn, vui lòng kích hoạt chức năng \"</string>
    <string name="fingerprint_enable_warning">Bất cứ dấu vân tay nào được cài đặt với thiết bị này đều có thể đăng nhập vào HomeCredit app. Bạn có muốn tiếp tục không?</string>
    <string name="status">Status</string>
    <string name="contract_id">Số HĐ</string>
    <string name="master_contract_title">Tóm Lược Hợp Đồng</string>
    <string name="master_contract_name">Bên vay</string>
    <string name="master_contract_toal_loan">Tổng giá trị khoản vay</string>
    <string name="interest_rate">Lãi suất</string>
    <string name="insurance">Bảo hiểm</string>
    <string name="payment_duration">Tổng số kỳ thanh toán</string>
    <string name="monthly_installement">Số tiền trả góp hàng tháng</string>
    <string name="bank_name">Ngân hàng</string>
    <string name="bank_account">Tài khoản ngân hàng</string>
    <string name="bank_branch">Chi nhánh</string>
    <string name="master_contract_approved">Xem chi tiết và xác nhận</string>
    <string name="mastercontract_status">Trạng thái hợp đồng</string>
    <string name="master_contract_wait_prepare">Vui lòng chờ giây lát để chúng tôi hoàn tất chuẩn bị dữ liệu hồ sơ của bạn</string>
    <string name="tenor">Thời hạn</string>
    <string name="payment_via_momo">Thanh toán qua Momo</string>
    <string name="paymomo_contractnumber">Contract number</string>
    <string name="paymomo_fullname">Full name</string>
    <string name="paymomo_idnumber">ID number</string>
    <string name="paymomo_total_amount">Out standing amount</string>
    <string name="paymomo_amount">Amount</string>
    <string name="paymomo_duedate">Due date</string>
    <string name="momo_full_payment">Tối đa</string>
    <string name="momo_partial_payment"><![CDATA[ Một phần <i>(tối thiểu 50.000 VND)</i> ]]></string>
</resources>