<!--
  ~ Copyright (c) 2018 Home Credit Vietnam. All rights reserved.
  ~
  ~ Last modified 7/5/18 2:48 PM, by quan.p@homecredit.vn
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.homecredit.hcvn.ui.acl.introduction.AclIntroductionCFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_centerInParent="true" >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_margin="16dp"
            android:src="@drawable/cash_loan_c_ico" />

        <TextView
            style="@style/AppTheme.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cash_loan_c_header"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <TextView
            style="@style/AppTheme.DescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/cash_loan_c_desc"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:layout_gravity="start" />


        <TextView
            style="@style/AppTheme.DescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawableLeft="@drawable/check_doc_ico"
            android:drawablePadding="@dimen/text_margin"
            android:text="@string/cash_loan_c_desc_1"
            android:textAlignment="center" />

        <TextView
            style="@style/AppTheme.DescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawableLeft="@drawable/check_doc_ico"
            android:drawablePadding="@dimen/text_margin"
            android:text="@string/cash_loan_c_desc_2"
            android:textAlignment="center" />
    </LinearLayout>

</RelativeLayout>
